--- a/final-project/src/main/resources/application.properties
+++ b/final-project/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/finalProjectdb
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
