--- a/final-project/pom.xml
+++ b/final-project/pom.xml
@@ -73,6 +73,11 @@
 			<artifactId>jBCrypt</artifactId>
 			<version>0.4</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+			<version>3.0.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
