--- a/final-project/.gitignore
+++ b/final-project/.gitignore
@@ -1,4 +1,13 @@
+target/
+!.mvn/wrapper/maven-wrapper.jar
 
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
 
 ### IntelliJ IDEA ###
 .idea
@@ -6,3 +15,10 @@
 *.iml
 *.ipr
 
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
